# ezlocalai

./: .dockerignore  .env  .gitignore  AGENTS.md  BENCHMARKS.md  Docker.md  DockerCompose.md  Dockerfile  FastInference.ipynb  GetModel.py  Globals.py  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  ManualSetup.md  Pipes.py  QUEUE_SYSTEM.md  README.md  RequestQueue.py  Router.py  Tunnel.py  __init__.py  app.py  benchmark.py  cli.py  configurator-requirements.txt  configurator.py  configure.py  cuda-requirements.txt  cuda.Dockerfile  cuda118-requirements.txt  deepseek.ps1  deepseek.yml  dev.yml  docker-compose-cuda-openai.yml  docker-compose-cuda.yml  docker-compose-dev.yml  docker-compose-jetson.yml  docker-compose-local.yml  docker-compose-multi.yml  (+49 more)
.github/workflows/: publish-docker-cpu-dev.yml  publish-docker-cuda-dev.yml  publish-docker-cuda.yml  publish-docker-dev.yml  publish-docker.yml  publish-python.yml  test-with-ezlocalai.yml
.streamlit/: config.toml
ezlocalai/: AudioCache.py  CTTS.py  CosyVoiceTTS.py  Embedding.py  Helpers.py  IMG.py  LLM.py  STT.py  VIDEO.py  VLM.py  WakeWord.py  context_retry.py  qwen_tts_compat.py
hf/: placeholder.txt
local_llm/: CTTS.py  LLM.py  STT.py  __init__.py  provider.py
models/: models-go-here.txt
outputs/: audio-outputs-go-here.txt
tests/: tests.ipynb
voices/: DukeNukem.txt  HAL9000.txt  Morgan_Freeman.txt  StarTrekComputer1.txt
